test/core/errors/constraints_error/zs/field_used_as_indexed_offset_error.zs
package field_used_as_indexed_offset_error;

struct Container
{
    uint32 offsets[];
offsets[@index]:
    string fields[] : lengthof(offsets) > 0;
};

